feat:新增关闭issue时发送通知功能
